--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@vuepress/plugin-google-analytics": "^1.0.0-rc.1"
     },
     "dependencies": {
-        "vuepress": "^1.0.2"
+        "vuepress": "^1.0.2",
+        "vuepress-plugin-new": "^0.1.3"
     }
 }
