--- a/package.json
+++ b/package.json
@@ -6,12 +6,20 @@
     "repository": "git@github.com:x-bao/new-bb.git",
     "author": "San Baofeng <sanbaofeng@foxmail.com>",
     "license": "MIT",
+    "scripts": {
+        "n": "vuepress new .",
+        "b": "vuepress build",
+        "s": "vuepress dev",
+        "d": "sh deploy.sh"
+    },
     "devDependencies": {
         "@vuepress/plugin-back-to-top": "^1.0.0-rc.1",
-        "@vuepress/plugin-google-analytics": "^1.0.0-rc.1"
+        "@vuepress/plugin-google-analytics": "^1.0.0-rc.1",
+        "moment": "^2.24.0"
     },
     "dependencies": {
         "vuepress": "^1.0.2",
-        "vuepress-plugin-new": "^0.1.3"
+        "vuepress-plugin-new": "^0.1.3",
+        "vuepress-theme-bb": "^0.2.0"
     }
 }
